--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
   </head>
   <body>
+
+    <header>
+      <h1>Jogo da Memória</h1>
+    </header>
+
     <!-- Estilo das Cartas -->
 
     <div id="tabuleiro">
@@ -38,6 +43,13 @@
     </div> 
 
     <!-- Tabuleiro -->
+    <footer>
+      <div id="gridFt">
+        <a href="https://github.com/lucasyule2212"><img src="Assets/github.png" id="footerimg" title="GitHub" alt="">
+        </a>
+        <p id="footertext">Created by: Lucas Yule</p>
+      </div>
+    </footer>
   </body>
   <script src="interface.js"></script>
   <script src="game.js"></script>
